[gd_scene load_steps=4 format=2]

[ext_resource path="res://EscenaMainMenu.gd" type="Script" id=1]
[ext_resource path="res://Art/Font/The Ancient Gods.otf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 96
font_data = ExtResource( 2 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
modulate = Color( 0.180392, 1, 0.639216, 1 )
show_behind_parent = true
anchor_left = 0.552
anchor_top = 0.546
anchor_right = 0.552
anchor_bottom = 0.546
margin_left = -430.84
margin_top = 0.320007
margin_right = -126.84
margin_bottom = 100.32
rect_scale = Vector2( 2, 2 )
custom_constants/separation = 20

[node name="Start" type="Button" parent="VBoxContainer"]
margin_right = 304.0
margin_bottom = 20.0
focus_neighbour_left = NodePath("../Quit")
focus_neighbour_top = NodePath("../Quit")
focus_neighbour_right = NodePath("../How to Play")
focus_neighbour_bottom = NodePath("../How to Play")
focus_next = NodePath("../How to Play")
focus_previous = NodePath("../Quit")
text = "Start"

[node name="How to Play" type="Button" parent="VBoxContainer"]
margin_top = 40.0
margin_right = 304.0
margin_bottom = 60.0
focus_neighbour_left = NodePath("../Start")
focus_neighbour_top = NodePath("../Start")
focus_neighbour_right = NodePath("../Quit")
focus_neighbour_bottom = NodePath("../Quit")
focus_next = NodePath("../Quit")
focus_previous = NodePath("../Start")
text = "How To Play"

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 80.0
margin_right = 304.0
margin_bottom = 100.0
focus_neighbour_left = NodePath("../How to Play")
focus_neighbour_top = NodePath("../How to Play")
focus_neighbour_right = NodePath("../Start")
focus_neighbour_bottom = NodePath("../Start")
focus_next = NodePath("../Start")
focus_previous = NodePath("../How to Play")
text = "Quit"

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -262.0
margin_top = -398.0
margin_right = 262.0
margin_bottom = -212.0
custom_fonts/font = SubResource( 1 )
text = "GEA OF WAR"
align = 1

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="VBoxContainer/How to Play" to="." method="_on_How_to_Play_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
